Introduce sample page

--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>v3x.property</title>
-</head>
-<body>
-    <h1>Welcome to v3x.property</h1>
-    <p>Our website is under construction. Please check back later.</p>
-    <p>Thank you for your patience.</p>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>v3x.property</title>
+        <link rel="stylesheet" href="./src/index.css" />
+    </head>
+    <body>
+        <div class="w-full max-w-xl mx-auto p-4 space-y-4 pb-32">
+            <div>
+                <div class="bg-black text-white px-2 py-0.5 font-bold">
+                    v3x.property
+                </div>
+                <div class="text-gray-500 px-2 py-0.5" title="1234567890">
+                    #1234567890
+                </div>
+            </div>
+            <div class="aspect-square border-2 w-full p-2">Graphic Here</div>
+            <div>
+                <h1 class="font-bold text-2xl">Battery Pack</h1>
+                <p>Anker 737 (PowerCore 24k)</p>
+            </div>
+            <div>
+                <div class="p-2 bg-gray-200">Location</div>
+                <div class="border p-2">
+                    <div class="flex justify-between">
+                        <span> Assigned to </span>
+                        <span class="text-purple-400">Stealth Backpack</span>
+                    </div>
+                    <div class="flex justify-between">
+                        <span>
+                            by
+                            <span class="text-pink-400">Luc</span>
+                        </span>
+                        <span class="text-blue-400">2 days ago</span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="p-2 bg-gray-200">Specifications</div>
+                <div class="border p-2">
+                    <div class="flex justify-between">
+                        <div>Battery Capacity</div>
+                        <div>4000mAh</div>
+                    </div>
+                    <div class="flex justify-between">
+                        <div>Purchased at Price</div>
+                        <div>16000 ¥ (~100$)</div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="p-2 bg-gray-200">Quick Actions</div>
+                <div class="border p-2">
+                    <div>Re-print Tag</div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
