--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,9 @@
                     #1234567890
                 </div>
             </div>
-            <div class="aspect-square border-2 w-full p-2">Graphic Here</div>
+            <div class="aspect-square border-2 w-full p-2 flex justify-center items-center">
+                <img src="https://media.s-bol.com/VZVXoqVokWkv/z700v2/960x1200.jpg" class="w-full h-full object-contain" />
+            </div>
             <div>
                 <h1 class="font-bold text-2xl">Battery Pack</h1>
                 <p>Anker 737 (PowerCore 24k)</p>
