--- a/web/index.html
+++ b/web/index.html
@@ -44,11 +44,23 @@
                 <div class="border p-2">
                     <div class="flex justify-between">
                         <div>Battery Capacity</div>
-                        <div>4000mAh</div>
+                        <div>24000mAh</div>
                     </div>
                     <div class="flex justify-between">
                         <div>Purchased at Price</div>
                         <div>16000 ¥ (~100$)</div>
+                    </div>
+                    <div class="flex justify-between">
+                        <div>EAN</div>
+                        <div>0194644098728</div>
+                    </div>
+                    <div class="flex justify-between">
+                        <div>Tweakers ID</div>
+                        <div>1855004</div>
+                    </div>
+                    <div class="flex justify-between">
+                        <div>SKU</div>
+                        <div>a1289, A1289011</div>
                     </div>
                 </div>
             </div>
