--- a/web/index.html
+++ b/web/index.html
@@ -5,9 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>v3x.property</title>
         <link rel="stylesheet" href="./src/index.css" />
+        <script type="module" src="./src/index.tsx"></script>
     </head>
     <body>
-        <div class="w-full max-w-xl mx-auto p-4 space-y-4 pb-32">
+        <div id="root"></div>
+        <!-- <div class="w-full max-w-xl mx-auto p-4 space-y-4 pb-32">
             <div>
                 <div class="bg-black text-white px-2 py-0.5 font-bold">
                     v3x.property
@@ -70,6 +72,6 @@
                     <div>Re-print Tag</div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </body>
 </html>
