--- a/engine/src/routes/index.html
+++ b/engine/src/routes/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>enstate.rs - Lightweight ENS API</title>
+        <title>v3x.property - Asset Tracking API</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" href="/docs/favicon.png" />
