--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>v3x.property</title>
+        <title>v3x-property</title>
         <link rel="stylesheet" href="./src/index.css" />
         <script type="module" src="./src/index.tsx"></script>
     </head>
