Introduce basic favicon

--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,10 @@
         <title>v3x-property</title>
         <link rel="stylesheet" href="./src/index.css" />
         <script type="module" src="./src/index.tsx"></script>
+        <link rel="icon" type="image/png" sizes="64x64" href="./public/default_cube_64.png">
+        <link rel="icon" type="image/png" sizes="48x48" href="./public/default_cube_48.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./public/default_cube_32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./public/default_cube_16.png">
     </head>
     <body>
         <div id="root"></div>
