--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+    v3xlabs/v3x-property
+
+    Built with love by V3X Labs
+    https://v3x.company
+-->
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -13,69 +19,5 @@
     </head>
     <body>
         <div id="root"></div>
-        <!-- <div class="w-full max-w-xl mx-auto p-4 space-y-4 pb-32">
-            <div>
-                <div class="bg-black text-white px-2 py-0.5 font-bold">
-                    v3x.property
-                </div>
-                <div class="text-gray-500 px-2 py-0.5" title="1234567890">
-                    #1234567890
-                </div>
-            </div>
-            <div class="aspect-square border-2 w-full p-2 flex justify-center items-center">
-                <img src="https://media.s-bol.com/VZVXoqVokWkv/z700v2/960x1200.jpg" class="w-full h-full object-contain" />
-            </div>
-            <div>
-                <h1 class="font-bold text-2xl">Battery Pack</h1>
-                <p>Anker 737 (PowerCore 24k)</p>
-            </div>
-            <div>
-                <div class="p-2 bg-gray-200">Location</div>
-                <div class="border p-2">
-                    <div class="flex justify-between">
-                        <span> Assigned to </span>
-                        <span class="text-purple-400">Stealth Backpack</span>
-                    </div>
-                    <div class="flex justify-between">
-                        <span>
-                            by
-                            <span class="text-pink-400">Luc</span>
-                        </span>
-                        <span class="text-blue-400">2 days ago</span>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div class="p-2 bg-gray-200">Specifications</div>
-                <div class="border p-2">
-                    <div class="flex justify-between">
-                        <div>Battery Capacity</div>
-                        <div>24000mAh</div>
-                    </div>
-                    <div class="flex justify-between">
-                        <div>Purchased at Price</div>
-                        <div>16000 ¥ (~100$)</div>
-                    </div>
-                    <div class="flex justify-between">
-                        <div>EAN</div>
-                        <div>0194644098728</div>
-                    </div>
-                    <div class="flex justify-between">
-                        <div>Tweakers ID</div>
-                        <div>1855004</div>
-                    </div>
-                    <div class="flex justify-between">
-                        <div>SKU</div>
-                        <div>a1289, A1289011</div>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div class="p-2 bg-gray-200">Quick Actions</div>
-                <div class="border p-2">
-                    <div>Re-print Tag</div>
-                </div>
-            </div>
-        </div> -->
     </body>
 </html>
